<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Decisore</string>
    <string name="title_activity_objective_list">Today objectives</string>
    <string name="title_activity_objective_archive">Finished objectives</string>
    <string name="title_activity_objective_list_append">today objectives</string>
    <string name="placeholderObjective">Objective</string>
    <string name="objectiveName">Name</string>
    <string name="objectiveDescription">Description</string>
    <string name="newObjectiveDialogName">New objective</string>
    <string name="newChainDialogName">New chain</string>
    <string name="editChainDialogName">Edit chain</string>
    <string name="newPoolDialogName">New pool</string>
    <string name="editPoolDialogName">Edit pool</string>
    <string name="editObjectiveDialogName">Edit objective</string>
    <string name="deleteObjectiveAreYouSure">Are you sure you want to delete</string>
    <string name="objectiveSchedule">Schedule for:</string>
    <string name="objectiveRepeats">Repeats:</string>
    <string name="objectiveOccasional">Occasional</string>
    <string name="chainPoolFrequency">Frequency:</string>
    <string name="chainPoolAutoDelete">Auto delete</string>
    <string name="createObjective">DO IT, MOTHERFUCKER!</string>
    <string name="createChain">DO IT, MOTHERFUCKER!</string>
    <string name="createPool">DO IT, MOTHERFUCKER!</string>
    <string name="createCancel">Cancel</string>

    <string name="menu_schedule_for_now">Schedule for now</string>
    <string name="menu_schedule_for_tomorrow">Schedule for tomorrow</string>
    <string name="menu_schedule_for_arbitrary" tools:ignore="TypographyEllipsis">Schedule for...</string>
    <string name="menu_add_objective_before" tools:ignore="TypographyEllipsis">Add objective before...</string>
    <string name="menu_add_objective_after" tools:ignore="TypographyEllipsis">Add objective after...</string>
    <string name="menu_edit_objective" tools:ignore="TypographyEllipsis">Edit objective...</string>
    <string name="menu_delete_objective">Delete objective</string>
    <string name="menu_edit_chain" tools:ignore="TypographyEllipsis">Edit chain...</string>
    <string name="menu_delete_chain">Delete chain</string>
    <string name="menu_edit_pool" tools:ignore="TypographyEllipsis">Edit pool...</string>
    <string name="menu_delete_pool">Delete pool</string>
    <string name="menu_pause_element">Pause</string>
    <string name="menu_unpause_element">Unpause</string>

    <string name="invalidObjectiveName">Invalid objective name</string>
    <string name="invalidChainName">Invalid chain name</string>
    <string name="invalidPoolName">Invalid pool name</string>
    <string name="openArchive">Objective archive</string>
    <string name="openScheduler">Objective scheduler</string>
    <string name="openOptions">Options</string>
    <string name="unixStartDate" tools:ignore="TypographyDashes">1970-01-01</string>
    <string name="dateParseErrorISO8601">Error parsing date. Enter the date in ISO 8601 format</string>
    <string name="do_it_tomorrow_principle">It\'s too late to schedule for today. Do it tomorrow.</string>
    <string name="frequencyParseError">Please enter the correct frequency in days</string>
    <string name="repeat_interval">Repeat every:</string>
    <string name="approx_frequency">Approx frequency:</string>
    <string name="placeholder_number_of_days">X days</string>
    <string name="not_implemented">Not implemented</string>

    <plurals name="plural_number_of_days">
        <item quantity="one">%1$d day</item>
        <item quantity="other">%1$d days</item>
    </plurals>
    <string name="title_activity_objective_scheduler">Scheduled objectives</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="day_start">Day start time</string>
    <string name="day_end_schedule_now">New objective threshold</string>
    <string name="show_objective_count">Show current objective count</string>
    <string name="chainUnstoppable">Unstoppable</string>
    <string name="poolUnstoppable">Unstoppable</string>
    <string name="button_objective_pool">Objective pool</string>
    <string name="button_objective_chain">Objective chain</string>
    <string name="button_objective">Objective</string>
    <string name="placeholder_period">1</string>
    <string name="choose_period">Choose the period</string>
    <string name="menu_open_parent">Open parent </string>

    <plurals name="plural_days">
        <item quantity="one">Day</item>
        <item quantity="other">Days</item>
    </plurals>

    <plurals name="plural_weeks">
        <item quantity="one">Week</item>
        <item quantity="other">Weeks</item>
    </plurals>

    <plurals name="plural_months">
        <item quantity="one">Month</item>
        <item quantity="other">Months</item>
    </plurals>

</resources>
