<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="wrap_content"
                                                   android:layout_height="wrap_content"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_margin="16dp"
                                                   android:id="@+id/layoutDialogNewChain">

    <EditText
            android:theme="@style/AdditionalTheme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editNewChainName"
            android:hint="@string/objectiveName"
            android:autofillHints=""
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <EditText
            android:theme="@style/AdditionalTheme"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:ems="10"
            android:id="@+id/editNewChainDescription"
            android:layout_marginTop="8dp"
            android:autofillHints=""
            android:hint="@string/objectiveDescription"
            app:layout_constraintTop_toBottomOf="@id/editNewChainName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/chainPoolFrequency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewChainFrequency"
            android:layout_marginTop="0dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/editNewChainDescription"
            app:layout_constraintStart_toStartOf="@id/editNewChainDescription"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinnerChainFrequency"
            android:entries="@array/produceFrequencyTypes"
            app:layout_constraintTop_toBottomOf="@id/editNewChainDescription"
            app:layout_constraintEnd_toEndOf="@id/editNewChainDescription"/>

    <TextView
            android:text="@string/chainPoolAutoDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginTop="0dp"
            android:id="@+id/textViewAutoDelete"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@id/checkboxAutoDelete"
            app:layout_constraintStart_toStartOf="@id/editNewChainDescription"/>

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxAutoDelete"
            app:layout_constraintTop_toBottomOf="@id/spinnerChainFrequency"
            app:layout_constraintStart_toStartOf="@id/spinnerChainFrequency"/>

    <TextView
            android:text="@string/chainUnstoppable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:layout_marginTop="0dp"
            android:textSize="16sp"
            android:id="@+id/textViewUnstoppable"
            app:layout_constraintBaseline_toBaselineOf="@id/checkboxChainUnstoppable"
            app:layout_constraintStart_toStartOf="@id/editNewChainDescription"/>

    <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkboxChainUnstoppable"
            app:layout_constraintTop_toBottomOf="@id/checkboxAutoDelete"
            app:layout_constraintStart_toStartOf="@id/checkboxAutoDelete"/>

</androidx.constraintlayout.widget.ConstraintLayout>