<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="wrap_content"
                                                   android:layout_height="wrap_content"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_margin="16dp"
                                                   android:id="@+id/layoutDialogNewObjective">
    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <EditText
                android:theme="@style/AdditionalTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_rowSpan="1"
                android:layout_columnSpan="2"
                android:ems="10"
                android:id="@+id/edit_objective_name"
                android:hint="@string/objectiveName"
                android:autofillHints=""
                android:importantForAutofill="no"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        <EditText
                android:theme="@style/AdditionalTheme"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_rowSpan="2"
                android:layout_columnSpan="2"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:ems="10"
                android:id="@+id/edit_objective_description"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@id/edit_objective_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:autofillHints=""
                android:hint="@string/objectiveDescription"/>

        <TextView
                android:text="@string/objectiveSchedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:textSize="16sp"
                android:id="@+id/text_view_objective_type"/>

        <com.sixshaman.decisore.utils.AlwaysItemSelectedSpinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:id="@+id/spinner_objective_schedule"
                android:entries="@array/objective_schedule_types"/>

        <TextView
                android:text="@string/objectiveRepeats"
                android:layout_width="wrap_content"
                android:layout_row="4"
                android:layout_column="0"
                android:textSize="16sp"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_defer_time"
                android:textAlignment="center"/>

        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:id="@+id/spinner_objective_repeats"
                android:entries="@array/objective_repeat_types"/>

        <TextView
                android:text="@string/repeat_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="0"
                android:singleLine="true"
                android:textSize="16sp"
                android:id="@+id/text_view_repeat_interval"/>

        <com.sixshaman.decisore.utils.AlwaysItemSelectedSpinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_column="1"
                android:layout_gravity="fill_horizontal"
                android:id="@+id/spinner_objective_interval"
                android:entries="@array/objective_interval_types"/>

        <TextView
                android:text="@string/objectiveOccasional"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:layout_column="0"
                android:layout_columnSpan="2"
                android:singleLine="true"
                android:textSize="16sp"
                android:id="@+id/text_view_occasional"/>

        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="6"
                android:layout_column="1"
                android:id="@+id/checkbox_occasional"/>
    </GridLayout>

</androidx.constraintlayout.widget.ConstraintLayout>